Reframe 2.8.1 public release

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,33 +2,16 @@
 #
 
 # You can set these variables from the command line.
-BUILD_CMD   = build
 DOCS        = docs
-DOCS_ALL    = _build/_allversions
-MASTER      = master
-PYTHON      = python
+PYTHON      = python3
 SPHINXOPTS  =
 SPHINXBUILD =  -msphinx
 SPHINXPROJ  = ReFrame
 SPHINX_VERS = sphinx-versioning
 SOURCEDIR   = .
 BUILDDIR    = $(VERSION)
-PANDOC      = pandoc
-PANDOCOPTS  = --columns 1000
 RM          = /bin/rm -rf
 TAG_VERS    = '^v\d+(\.\d+)*[a-z]*'
-
-MDS = about.md \
-	advanced.md \
-	configure.md \
-	deferrables.md \
-	pipeline.md \
-	running.md \
-	started.md \
-	tutorial.md \
-	usecases.md
-
-RSTS = $(MDS:.md=.rst)
 
 TARGET_DOCS := \
 	help \
@@ -56,24 +39,17 @@ TARGET_DOCS := \
 	doctest \
 	coverage
 
-all: $(RSTS)
+all:
 	@$(SPHINX_VERS) -l conf.py build docs/ html/
 	@rsync -az old/ html/_old/
 	@./link_old_docs.sh
 
-latest: $(RSTS)
+latest:
 	@make html
 	@touch html/.nojekyll
 	@rsync -az old/ html/_old/
 
-%.rst: %.md
-	$(PANDOC) $(PANDOCOPTS) --from=markdown --to=rst --output=$(@) $(@:.rst=.md)
-
 clean:
-	@echo 'Removing md files'
-	-$(RM) $(RSTS)
-
-distclean: clean
 	@echo 'Removing directories'
 	-$(RM) $(TARGET_DOCS) doctrees
 
@@ -82,4 +58,4 @@ $(TARGET_DOCS): Makefile
 
 
 
-.PHONY: all distclean clean latest Makefile
+.PHONY: all clean latest Makefile
