Try stages feature

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,17 @@ python:
     - "3.5"
     - "3.6"
 
-install:
-    - pip install -r requirements.txt
+jobs:
+    include:
+        install:
+            - pip install -r requirements.txt
 
-script:
-    ./test_reframe.py
+        script:
+            ./test_reframe.py
+        - stage: pep8
+            install:
+                - pip install pycodestyle
+            python: 3.6
+            script:
+                pycodestyle reframe/
+
