--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
     - pip install -r requirements.txt
     - pip install pycodestyle
 
-script: ./test_reframe.py
-
-after_script: pycodestyle reframe/
+script:
+    - ./test_reframe.py
+    - pycodestyle reframe/
 
