Update requirements for doc generation

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -13,10 +13,11 @@ port-for>=0.3.1
 Pygments>=2.2.0
 pytz>=2017.2
 PyYAML>=3.12
+recommonmark>=0.4.0
 requests>=2.18.4
 six>=1.11.0
 snowballstemmer>=1.2.1
-Sphinx>=1.6.3
+Sphinx<=1.6.7
 sphinx-autobuild>=0.7.1
 sphinx-bootstrap-theme>=0.5.3
 sphinx-fakeinv>=1.0.0
