--- a/cscs-checks/tools/profiling_and_debugging/src/C++/Makefile_ddt
+++ b/cscs-checks/tools/profiling_and_debugging/src/C++/Makefile_ddt
@@ -1,17 +1,18 @@
-LD = $(CXX)
+RM := rm -f
+EXECUTABLE := jacobi
 
-OBJ            = _jacobi.o _main.o 
-OBJ2 	       = $(subst _,$(PE_ENV)_,$(OBJ))
-LIB            = 
+all: jacobi
 
-.SUFFIXES: .o .cc
+OBJS := _main.o _jacobi.o
 
-%.o: %.cc
-	$(CXX) $(CXXFLAGS) $(DDTFLAGS) -c $< -o $(PE_ENV)$@
+$(OBJS):
+	$(PREP) $(CXX) $(CXXFLAGS) -c -o $(@) $(@:.o=.cc)
 
-ddt_check: $(OBJ)
-	$(LD) $(LDFLAGS) $(OBJ2) $(LIB) -o $@
+$(EXECUTABLE): $(OBJS)
+	$(PREP) $(CXX) $(CXXFLAGS) $(LDFLAGS) -o $(@) $(OBJS)
 
 clean:
-	rm -f *.o o_* *.mod ddt_check_cc
-	rm -fr *.ptx *.opt *.cg *.ap2 *.rpt *.cub *.lst *.xf
+	-$(RM) $(OBJS)
+
+distclean:
+	-$(RM) $(OBJS) $(EXECUTABLE)
