--- a/cscs-checks/microbenchmarks/osu/src/Makefile_p2p
+++ b/cscs-checks/microbenchmarks/osu/src/Makefile_p2p
@@ -3,8 +3,8 @@ EXECUTABLES := p2p_osu_bw p2p_osu_latency
 all: $(EXECUTABLES)
 
 SRCS += osu_util.c \
-        osu_latency.c \
-        osu_bw.c
+		osu_latency.c \
+		osu_bw.c
 
 OBJS_BW = osu_util.o osu_bw.o
 OBJS_LT = osu_util.o osu_latency.o
@@ -12,14 +12,13 @@ OBJS_LT = osu_util.o osu_latency.o
 OBJS := $(SRCS:.c=.o)
 
 $(OBJS):
-	$(CC) $(CXXFLAGS) $(CPPFLAGS) -o $(@) -c $(@:.o=.c)
+	$(CC) $(CPPFLAGS) $(CXXFLAGS) -o $(@) -c $(@:.o=.c)
 
 p2p_osu_bw: $(OBJS_BW)
-	$(CC) $(CXXFLAGS) $(CPPFLAGS) $(LDFLAGS) $(OBJS_BW) -o $(@)
+	$(CC) $(CPPFLAGS) $(CXXFLAGS) -o $(@) $(OBJS_BW) $(LDFLAGS)
 
 p2p_osu_latency: $(OBJS_LT)
-	$(CC) $(CXXFLAGS) $(CPPFLAGS) $(LDFLAGS) $(OBJS_LT) -o $(@)
+	$(CC) $(CPPFLAGS) $(CXXFLAGS) -o $(@) $(OBJS_LT) $(LDFLAGS)
 
 clean:
 	rm -f $(OBJS) $(EXECUTABLES)
-
