--- a/cscs-checks/prgenv/src/Makefile
+++ b/cscs-checks/prgenv/src/Makefile
@@ -2,4 +2,4 @@ vecAdd_opencl: vecAdd_opencl.o
 	${CC} -L${CUDATOOLKIT_HOME}/lib64 -lOpenCL $^ -o $@
 
 vecAdd_opencl.o: vecAdd_opencl.c vecAddKernel.cl
-	${CC} -c -I${CUDATOOLKIT_HOME}/include $< -o $@
+	${CC} ${CFLAGS} -c -I${CUDATOOLKIT_HOME}/include $< -o $@
