Add generic command line option for showing configuration parameters
- Replace `--show-config` and `--show-env-config` options with
  `--show-config=PARAM` which can be used to query any configuration parameter
  from the framework. It doesn't work ideally yet, because if you request a
  full configuration section that is not defined explicitly in the configuration
  file, it will issue an error, but if you request a single terminal parameter,
  it will return its default value. For example, using the generic
  configuration, `--show-config=general` yields an error, but
  `--show-config=general/check_search_path` returns the default value of this
  terminal parameter.

- `System`, `SystemPartition` and `Environment` acquired propert str() and
  repr() methods

--- a/schemas/config.json
+++ b/schemas/config.json
@@ -207,7 +207,8 @@
                             },
                             "required": ["name", "scheduler", "launcher"],
                             "additionalProperties": false
-                        }
+                        },
+                        "minItems": 1
                     }
                 },
                 "required": ["name", "hostnames"],
