Add environment variable for setting the Graylog server
- Do not add the Graylog handler if a connection cannot be established. The
  reason for that is to allow a dummy server address in the configuration file,
  which will be overriden by an environment variable.
- Other fixes in the Graylog handler attachment code.

--- a/schemas/config.json
+++ b/schemas/config.json
@@ -404,6 +404,7 @@
         "logging/handlers*/file_append": false,
         "logging/handlers*/file_timestamp": false,
         "logging/handlers*/filelog_basedir": "./perflogs",
+        "logging/handlers*/graylog_extras": {},
         "logging/handlers*/stream_name": "stdout",
         "logging/handlers*/syslog_socktype": "udp",
         "logging/handlers*/syslog_facility": "user",
