Fix schema syntax

--- a/schemas/config.json
+++ b/schemas/config.json
@@ -71,7 +71,7 @@
                 {
                     "properties": {
                         "basedir": {"type": "string"},
-                        "prefix": {"type": "string"}
+                        "prefix": {"type": "string"},
                         "append": {"type": "boolean"}
                     },
                     "required": ["prefix"]
