--- a/unittests/resources/checks/src/Makefile
+++ b/unittests/resources/checks/src/Makefile
@@ -1,17 +1,11 @@
 .PHONY: all clean
 
-PROGRAMS = hello_c hello_cpp hello_fort
+PROGRAMS = hello_c
 
 all: $(PROGRAMS)
 
 hello_c: hello.c
 	$(CC) $(CFLAGS) -o $@ $<
-
-hello_cpp: hello.cpp
-	$(CXX) $(CXXFLAGS) -o $@ $<
-
-hello_fort: hello.f90
-	$(FC) $(FFLAGS) -o $@ $<
 
 clean:
 	/bin/rm -f $(PROGRAMS)
