add option to emit -N

--- a/reframe/schemas/config.json
+++ b/reframe/schemas/config.json
@@ -274,6 +274,7 @@
                 "type": "object",
                 "properties": {
                     "name": {"type": "string"},
+		    "emit_num_nodes": {"type": "boolean"},
                     "job_submit_timeout": {"type": "number"},
                     "target_systems": {"$ref": "#/defs/system_ref"}
                 },
@@ -419,6 +420,7 @@
         "modes/target_systems": ["*"],
         "schedulers/job_submit_timeout": 60,
         "schedulers/target_systems": ["*"],
+	"schedulers/emit_num_nodes": false,
         "systems/descr": "",
         "systems/modules_system": "nomod",
         "systems/modules": [],
