--- a/reframe/schemas/config.json
+++ b/reframe/schemas/config.json
@@ -273,15 +273,14 @@
             "items": {
                 "type": "object",
                 "properties": {
-                    "name": {"type": "string"},
-                    "use_nodes_option": {"type": "boolean"},
                     "name": {
                         "type": "string",
                         "enum": ["local", "pbs", "slurm", "squeue", "torque"]
                     },
                     "ignore_reqnodenotavail": {"type": "boolean"},
                     "job_submit_timeout": {"type": "number"},
-                    "target_systems": {"$ref": "#/defs/system_ref"}
+                    "target_systems": {"$ref": "#/defs/system_ref"},
+                    "use_nodes_option": {"type": "boolean"}
                 },
                 "required": ["name"],
                 "additionalProperties": false
