schemas: add missing launchers `upcrun` and `upcxx-run`

--- a/reframe/schemas/config.json
+++ b/reframe/schemas/config.json
@@ -169,7 +169,8 @@
                                     "type": "string",
                                     "enum": [
                                         "alps",  "ibrun", "local", "mpirun",
-                                        "mpiexec", "srun", "srunalloc", "ssh"
+                                        "mpiexec", "srun", "srunalloc", "ssh",
+                                        "upcrun", "upcxx-run"
                                     ]
                                 },
                                 "access": {
