--- a/reframe/schemas/config.json
+++ b/reframe/schemas/config.json
@@ -366,6 +366,7 @@
                     "purge_environment": {"type": "boolean"},
                     "report_file": {"type": "string"},
                     "save_log_files": {"type": "boolean"},
+                    "save_report_file": {"type": "boolean"},
                     "target_systems": {"$ref": "#/defs/system_ref"},
                     "timestamp_dirs": {"type": "string"},
                     "unload_modules": {
@@ -409,6 +410,7 @@
         "general/purge_environment": false,
         "general/report_file": "${HOME}/.reframe/reports/run-report-{sessionid}.json",
         "general/save_log_files": false,
+        "general/save_report_file": true,
         "general/target_systems": ["*"],
         "general/timestamp_dirs": "",
         "general/unload_modules": [],
