--- a/cscs-checks/prgenv/src/opencl/Makefile
+++ b/cscs-checks/prgenv/src/opencl/Makefile
@@ -1,5 +1,5 @@
-vecAdd_opencl: vecAdd_opencl.o
+vecAdd_opencl: vecAdd.o
 	${CC} -L${CUDATOOLKIT_HOME}/lib64 -lOpenCL $^ -o $@
 
-vecAdd_opencl.o: vecAdd_opencl.c vecAddKernel.cl
+vecAdd_opencl.o: vecAdd.c vecAddKernel.cl
 	${CC} ${CFLAGS} -c -I${CUDATOOLKIT_HOME}/include $< -o $@
