--- a/reframe/schemas/config.json
+++ b/reframe/schemas/config.json
@@ -356,7 +356,7 @@
                     "clean_stagedir": {"type": "boolean"},
                     "colorize": {"type": "boolean"},
                     "ignore_check_conflicts": {"type": "boolean"},
-                    "ignore_exit_code": {"type": "boolean"},
+                    "trap_job_errors": {"type": "boolean"},
                     "keep_stage_files": {"type": "boolean"},
                     "module_map_file": {"type": "string"},
                     "module_mappings": {
@@ -403,7 +403,7 @@
         "general/clean_stagedir": true,
         "general/colorize": true,
         "general/ignore_check_conflicts": false,
-        "general/ignore_exit_code": true,
+        "general/trap_job_errors": false,
         "general/keep_stage_files": false,
         "general/module_map_file": "",
         "general/module_mappings": [],
